@@ -35,17 +35,33 @@ local check_for_whitespaces = function( release )
     end
 end
 
+local directory_has_nfo = function( path )
+    for file in lfs.dir(path) do
+        if file ~= "." and file ~= ".." then
+            local f = path..'/'..file
+            local attr = lfs.attributes (f)
+            local _dir, _file, _ext = string.match( f, "(.-)([^\\/]-%.?([^%.\\/]*))$" )
+            if attr.mode == "file" and _ext == "nfo" then
+                return true
+            end
+        end
+    end
+    return false
+end
+
 local search = function( path, cfg, found )
     local count = 0
     local lfs_a = lfs.attributes
     for release in lfs.dir( path ) do
+        print('blub')
         local f = path .. "/" .. release
         local mode, err = lfs_a( f ).mode
         if ( release ~= "." ) and ( release ~= "..") and ( not announce.blocked[ release ] ) and ( not alreadysent[ release ] ) then
             if match( release, cfg.blacklist )
             or ( not match( release, cfg.whitelist, true ) )
             or ( cfg.checkspaces == true and check_for_whitespaces( release ) )
-            or ( cfg.checkage == true and cfg.maxage > 0 and age_in_days( lfs_a( f ).modification ) >= cfg.maxage ) then
+            or ( cfg.checkage == true and cfg.maxage > 0 and age_in_days( lfs_a( f ).modification ) >= cfg.maxage ) 
+            or ( cfg.checkdirs and cfg.checkdirsnfo and not directory_has_nfo( f ) ) then
                 --log.event( "Release '" .. release .. "' blocked." )
                 count = count + 1
             else
